Fixed nav bar height, changed logo text to actual text, fixed staff icons spacing

--- a/_stys/global.css
+++ b/_stys/global.css
@@ -26,8 +26,9 @@ nav { display:block;
 		list-style-type:none; 
 		font-weight:normal; 
 		color:#aaa;
-		cursor:pointer; 
-		padding:20px; } 
+		cursor:pointer; } 
+	nav .menu li:not(:nth-of-type(1)) {
+		padding:20px; }
 	nav .menu li:hover { background-color:#222; 
 		color:#fff; }
 
@@ -37,12 +38,15 @@ nav { display:block;
 		width:50px; 
 		padding:0px 5px 0px 70px;  
 		background-image:url('../_imgs/logo_small.png'); 
-		background-position:0px 1px; 
+		/*background-position:0px 1px; */
+		position:relative; 
+		top:1px; 
 		border-right:1px solid #333; 
 		color:#fafafa; 
 		font-weight:bold; 
 		font-size:14pt; 
-		font-family:Segan; } 
+		font-family:Segan; 
+		vertical-align:top; } 
 	nav .menu li#logo:hover { background-color:transparent !important; } 
 
 	nav .menu li.selected { background-color:#111; 
